# Cohoma-IHM

./: .gitignore  README.md  Readme.md  main.py  proxy-droneID.py  pyproject.toml  reporting.py  terrain.csv
apis/: base.py
apis/version1/: route_baptemes.py  route_general_pages.py  route_markers.py  route_satellites.py  route_websockets.py
core/: config.py  map_layers.py  websockets.py
db/: base.py  session.py
db/models/: baptemes.py  markers.py  paths.py  satellites.py
db/repository/: baptemes.py  markers.py  satellites.py
schemas/: baptemes.py  markers.py  satellites.py
templates/components/: popup.html  satellite.html  traps.html
templates/general_pages/: homepage.html
templates/shared/: base.html
