[tool.poetry]
name = "geodata"
version = "0.1.0"
description = "IHM pour CoHoMa II - 2023"
authors = ["cbares <38895035+cbares@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
pydantic = "^1.10.6"
uvicorn = "^0.21.1"
SQLAlchemy = "^2.0.7"
aiofiles = "^23.1.0"
xyzservices = "^2023.2.0"
folium = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
